# Agentlab

./: .env.example  .gitignore  AGENTS.md  Everyday_outcome.md  README.md  log_config.json  pyproject.toml
logs/: traces.jsonl
src/agentlab/: __init__.py  api_schemas.py  app.py  config.py  types.py
src/agentlab/models/: base.py  gemini_genai.py  mock_client.py
src/agentlab/observability/: otel.py
src/agentlab/orchestration/: react_loop.py
src/agentlab/runtime/: cancel.py  events.py  task_manager.py
src/agentlab/scripts/: day3_smoke.py
src/agentlab/tools/: builtins.py  registry.py  trace_tree.py
