[project]
name = "agentlab"
version = "0.1.0"
description = "Agentlab project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv>=1.0.0",
    "google-genai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
